<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/miulogo" />

    <TextView
        android:id="@+id/textView13"
        style="@style/thirdlayout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="228dp"
        android:text="@string/third_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="403dp"
        android:orientation="vertical"
        android:padding="15dp"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="265dp">

        <TextView
            android:id="@+id/textView14"
            style="@style/thirdlayout_required"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/third_required" />

        <TextView
            android:id="@+id/textView15"
            style="@style/thirdlayout_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_fname" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView16"
            style="@style/thirdlayout_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_lname" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView17"
            style="@style/thirdlayout_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_email" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/textView18"
            style="@style/thirdlayout_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_password" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#0980D6"
            android:text="Create Account" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>